--- a/app/services/gpt-context/requirements.txt
+++ b/app/services/gpt-context/requirements.txt
@@ -4,3 +4,7 @@ python-dotenv==1.0.0
 gptcache==0.1.23
 openai==0.27.6
 tiktoken==0.4.0
+grpcio==1.54.2
+grpcio-tools==1.54.2
+betterproto==2.0.0b5
+betterproto[compiler]==2.0.0b5
