feat(telegram-bot): add Makefile, go.mod, go.sum, and main.go for telegram-bot service A new telegram-bot service is being introduced, which requires the addition of a Makefile for building the protobuf files, go.mod and go.sum for managing dependencies, and a main.go file as the entry point for the service. This will allow the development of the telegram-bot service to proceed.

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   gpt-service:
     build:
       context: .
-      dockerfile: ./app/services/gpt-context/Dockerfile
+      dockerfile: services/gpt-context/Dockerfile
       args:
         OPENAI_API_KEY: ${OPENAI_API_KEY}
     environment:
@@ -12,4 +12,4 @@ services:
     ports:
       - 50051:50051
     volumes:
-      - ./app/services/gpt-context/source_documents:/app/app/services/gpt-context/source_documents
+      - ./services/gpt-context/source_documents:/app/services/gpt-context/source_documents
