feat(telegram-bot): add .dockerignore and Dockerfile for containerization feat(telegram-bot): implement telegram bot functionality with rate limiting refactor(telegram-bot): separate gpt and telegram logic into separate files The changes introduce a Dockerfile and .dockerignore to containerize the telegram bot service. The telegram bot functionality is implemented with rate limiting to prevent abuse. The code is refactored to separate the GPT and telegram logic into separate files for better organization and maintainability.

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,13 @@ services:
       PERSIST_DIRECTORY: ${PERSIST_DIRECTORY}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_MODEL: ${OPENAI_MODEL}
-    ports:
-      - 50051:50051
     volumes:
       - ./services/gpt-context/source_documents:/app/services/gpt-context/source_documents
+
+  telegram-bot:
+    build:
+      context: .
+      dockerfile: services/telegram-bot/Dockerfile
+    environment:
+      GPT_SERVICE_ADDRESS: gpt-service:50051
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
