feat(adapters): add VectorStoreAdapter and WeaviateVectorStoreAdapter refactor(ingest.py, openai_client.py): replace Chroma with WeaviateVectorStoreAdapter chore(requirements.txt): update langchain version and add weaviate-client
The new VectorStoreAdapter abstract class and WeaviateVectorStoreAdapter implementation are added to support different vector store backends. The code in ingest.py and openai_client.py is refactored to use the new WeaviateVectorStoreAdapter instead of Chroma. The langchain version is updated in requirements.txt, and the weaviate-client package is added as a new dependency.

--- a/compose.yaml
+++ b/compose.yaml
@@ -19,3 +19,24 @@ services:
     environment:
       GPT_SERVICE_ADDRESS: gpt-service:50051
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+    depends_on:
+      - gpt-service
+
+  weaviate:
+    image: semitechnologies/weaviate:1.19.6
+    expose:
+      - 8080
+    ports:
+      - 8080:8080
+    restart: unless-stopped
+    environment:
+      QUERY_DEFAULTS_LIMIT: 25
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
+      PERSISTENCE_DATA_PATH: /var/lib/weaviate
+      DEFAULT_VECTORIZER_MODULE: 'none'
+      CLUSTER_HOSTNAME: 'node1'
+    volumes:
+      - weaviate-data:/var/lib/weaviate
+
+volumes:
+  weaviate-data:
