feat(adapters): add RedisStoreAdapter for Redis-based vector store refactor(adapters): remove WeaviateVectorStoreAdapter and related code refactor(gpt-context): update dependencies and adjust code accordingly The RedisStoreAdapter is added to support Redis as a vector store, providing a more efficient and scalable storage solution. The WeaviateVectorStoreAdapter and related code are removed as they are no longer needed. Dependencies are updated, and the code is adjusted to work with the new RedisStoreAdapter and updated dependencies.

--- a/compose.yaml
+++ b/compose.yaml
@@ -22,21 +22,15 @@ services:
     depends_on:
       - gpt-service
 
-  weaviate:
-    image: semitechnologies/weaviate:1.19.6
+  redis-store:
+    image: redis/redis-stack:latest
     expose:
-      - 8080
+      - 6379
     ports:
-      - 8080:8080
+      - 6379:6379
     restart: unless-stopped
-    environment:
-      QUERY_DEFAULTS_LIMIT: 25
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
-      PERSISTENCE_DATA_PATH: /var/lib/weaviate
-      DEFAULT_VECTORIZER_MODULE: 'none'
-      CLUSTER_HOSTNAME: 'node1'
     volumes:
-      - weaviate-data:/var/lib/weaviate
+      - redis-cache-data:/data
 
 volumes:
-  weaviate-data:
+  redis-cache-data:
