refactor(gpt-context/Dockerfile): remove OPENAI_API_KEY environment variable feat(gpt-context/Dockerfile): run ingest.py before main.py in CMD feat(gpt-context/requirements.txt): add redis dependency
The OPENAI_API_KEY environment variable is removed from the Dockerfile as it is not needed in the build process. The CMD command in the Dockerfile now runs ingest.py before main.py, ensuring that the data ingestion process is completed before the main application starts. The redis dependency is added to the requirements.txt file to enable the use of Redis for caching and data storage.

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,19 +3,23 @@ services:
     build:
       context: .
       dockerfile: services/gpt-context/Dockerfile
-      args:
-        OPENAI_API_KEY: ${OPENAI_API_KEY}
+    restart: unless-stopped
+    expose:
+      - 50051
     environment:
-      PERSIST_DIRECTORY: ${PERSIST_DIRECTORY}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_MODEL: ${OPENAI_MODEL}
+      REDIS_URL: ${REDIS_URL}
     volumes:
       - ./services/gpt-context/source_documents:/app/services/gpt-context/source_documents
+    depends_on:
+      - redis-store
 
   telegram-bot:
     build:
       context: .
       dockerfile: services/telegram-bot/Dockerfile
+    restart: unless-stopped
     environment:
       GPT_SERVICE_ADDRESS: gpt-service:50051
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
@@ -26,8 +30,6 @@ services:
     image: redis/redis-stack:latest
     expose:
       - 6379
-    ports:
-      - 6379:6379
     restart: unless-stopped
     volumes:
       - redis-cache-data:/data
