--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_MODEL: ${OPENAI_MODEL}
       REDIS_URL: ${REDIS_URL}
+      WEAVIATE_URL: ${WEAVIATE_URL}
     volumes:
       - ./services/gpt-context/source_documents:/app/services/gpt-context/source_documents
     depends_on:
@@ -30,9 +31,28 @@ services:
     image: redis/redis-stack:latest
     expose:
       - 6379
+    ports:
+      - 6379:6379
     restart: unless-stopped
     volumes:
       - redis-cache-data:/data
 
+  weaviate:
+    image: semitechnologies/weaviate:1.19.6
+    expose:
+      - 8080
+    ports:
+      - 8080:8080
+    restart: unless-stopped
+    environment:
+      QUERY_DEFAULTS_LIMIT: 25
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
+      PERSISTENCE_DATA_PATH: /var/lib/weaviate
+      DEFAULT_VECTORIZER_MODULE: 'none'
+      CLUSTER_HOSTNAME: 'node1'
+    volumes:
+      - weaviate-data:/var/lib/weaviate
+
 volumes:
   redis-cache-data:
+  weaviate-data:
