--- a/services/gpt-context/requirements.txt
+++ b/services/gpt-context/requirements.txt
@@ -1,4 +1,4 @@
-langchain==0.0.198
+langchain==0.0.200
 python-dotenv==1.0.0
 openai==0.27.8
 tiktoken==0.4.0
@@ -7,3 +7,4 @@ grpcio-tools==1.54.2
 betterproto==2.0.0b5
 betterproto[compiler]==2.0.0b5
 redis==4.5.5
+weaviate-client==3.20.1
