--- a/services/gpt-context/Makefile
+++ b/services/gpt-context/Makefile
@@ -1,2 +1,5 @@
 build_proto:
 	mkdir -p ./lib && poetry run python -m grpc_tools.protoc -I ../../protos --python_betterproto_out=lib ../../protos/*.proto
+
+init_vector_store:
+	poetry run python ingest.py
