feat(gpt-context): add new gpt-context service with OpenAI client and vector store adapters
- Add new gpt-context service with OpenAI client and vector store adapters for Weaviate and Redis.
- Implement main functionality for gpt-context service including ingestion of documents, vector store setup, and OpenAI client setup.
- Add Makefile and README for gpt-context service.
- Update pyproject.toml to include gpt_context package.
- These changes are done to provide a service for context-based GPT-3 interactions.

--- a/services/gpt-context/pyproject.toml
+++ b/services/gpt-context/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Pavel Karpovich <pavel.karpovich@outlook.com>"]
 readme = "README.md"
+packages = [{include = "gpt_context"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
