feat(gpt-context): add truncate method to VectorStoreAdapter and WeaviateVectorStoreAdapter feat(gpt-context): add clear_index method to GptService to clear vector store refactor(gpt-context): remove redis_url from ingest.py and main.py refactor(gpt-context): change source_documents path in ingest.py refactor(gpt-context): pass VectorStoreAdapter instance to OpenaiClient instead of redis_url and weaviate_url refactor(gpt-context): pass VectorStoreAdapter instance to GptService in main.py feat(Makefile): add weaviate_console command to open Weaviate console in browser
The changes were made to add the ability to clear the vector store, refactor the code to improve the design and add a convenient way to open the Weaviate console.

--- a/services/gpt-context/Makefile
+++ b/services/gpt-context/Makefile
@@ -3,3 +3,6 @@ build_proto:
 
 init_vector_store:
 	poetry run python gpt_context/ingest.py
+
+weaviate_console:
+	open https://console.weaviate.cloud/
