--- a/services/gpt-context/pyproject.toml
+++ b/services/gpt-context/pyproject.toml
@@ -17,6 +17,9 @@ redis = "4.5.5"
 langchain = "^0.0.222"
 weaviate-client = "^3.21.0"
 openai = "^0.27.8"
+google-api-python-client = "^2.91.0"
+google-auth-httplib2 = "^0.1.0"
+google-auth-oauthlib = "^1.0.0"
 
 
 [build-system]
