--- a/services/gpt-context/pyproject.toml
+++ b/services/gpt-context/pyproject.toml
@@ -8,14 +8,14 @@ packages = [{include = "gpt_context"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-python-dotenv = "1.0.0"
-tiktoken = "0.4.0"
-grpcio = "1.54.2"
-grpcio-tools = "1.54.2"
-betterproto = {version = "2.0.0b5", extras = ["compiler"]}
-redis = "4.5.5"
-langchain = "^0.0.222"
-weaviate-client = "^3.21.0"
+python-dotenv = "^1.0.0"
+tiktoken = "^0.4.0"
+grpcio = "^1.54.2"
+grpcio-tools = "^1.54.2"
+betterproto = {version = "^2.0.0b5", extras = ["compiler"]}
+redis = "^4.5.5"
+langchain = "^0.0.228"
+weaviate-client = "^3.22.0"
 openai = "^0.27.8"
 google-api-python-client = "^2.91.0"
 google-auth-httplib2 = "^0.1.0"
