feat: add MongoDB as conversation store to persist chat history
- Add MongoDB service to docker-compose file
- Add MongoDB environment variables to docker-compose file
- Add conversationId to AskRequest and ClearHistoryRequest in gpt.proto
- Update WeaviateVectorStoreAdapter to accept attributes as parameter
- Update GptGrpcService to pass conversationId to ask and clear_history methods
- Update GptController to pass conversationId to ask and clear_history methods
- Add ConversationStore to main.py
- Update QAService to use ConversationStore for persisting and retrieving chat history
- Add ConversationStore class for handling MongoDB operations
- Add pymongo to pyproject.toml dependencies

This change allows the application to persist chat history in a MongoDB database, enabling retrieval of past conversations and providing a more robust and scalable solution for conversation history management.

--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,9 @@ services:
       OPENAI_MODEL: ${OPENAI_MODEL}
       REDIS_URL: ${REDIS_URL}
       WEAVIATE_URL: ${WEAVIATE_URL}
+      MONGODB_URI: ${MONGODB_URI}
+      MONGODB_USERNAME: ${MONGODB_USERNAME}
+      MONGODB_PASSWORD: ${MONGODB_PASSWORD}
     volumes:
       - ./services/gpt-context/source_documents:/app/services/gpt-context/source_documents
     depends_on:
@@ -53,6 +56,20 @@ services:
     volumes:
       - weaviate-data:/var/lib/weaviate
 
+  conversation_store:
+    image: mongo:6.0.7
+    expose:
+      - 27017
+    ports:
+      - 27017:27017
+    restart: unless-stopped
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
+    volumes:
+      - conversation-store-data:/data/db
+
 volumes:
+  conversation-store-data:
   redis-cache-data:
   weaviate-data:
