--- a/services/gpt-context/pyproject.toml
+++ b/services/gpt-context/pyproject.toml
@@ -20,6 +20,7 @@ openai = "^0.27.8"
 google-api-python-client = "^2.91.0"
 google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^1.0.0"
+pymongo = "^4.4.0"
 
 
 [build-system]
