--- a/services/instagram_service/pyproject.toml
+++ b/services/instagram_service/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "instagram_service"}]
 [tool.poetry.dependencies]
 python = "^3.11.4"
 instagrapi = "^1.17.13"
+pillow = "^10.0.0"
 
 [build-system]
 requires = ["poetry-core"]
