feat(docker): update Dockerfile to use Python 3.11.4 and slim-buster base image, add poetry for dependency management, and improve Dockerfile structure for better caching and smaller image size feat(gpt-context): update betterproto to version 2.0.0b6 and langchain to version 0.0.236 in pyproject.toml refactor(gpt_grpc_service.py): remove error handling from ask method in GptGrpcService class to simplify code and improve readability chore(dockerignore): add .credentials to .dockerignore to prevent sensitive data from being included in the Docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -30,10 +30,10 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+**/.idea
+**/db
+**/lib
+**/source_documents
+**/.credentials
 LICENSE
 README.md
-
-db
-lib
-source_documents
-.credentials
