--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       MONGODB_URI: ${MONGODB_URI}
       MONGODB_USERNAME: ${MONGODB_USERNAME}
       MONGODB_PASSWORD: ${MONGODB_PASSWORD}
+      GOOGLE_APPLICATION_TOKEN: ${GOOGLE_APPLICATION_TOKEN}
+      GOOGLE_APPLICATION_CREDENTIALS: ${GOOGLE_APPLICATION_CREDENTIALS}
     volumes:
       - ./services/gpt-context/source_documents:/app/source_documents
       - ./services/gpt-context/.credentials:/app/.credentials
