feat(Dockerfile): update Dockerfile to use golang base image and install protobuf-compiler feat(Makefile): add new Makefile to build protobuf files feat(config.go): add APP_ENV environment variable to load .env file only in non-production environments refactor(Dockerfile, config.go): change working directory from /src to /app for better naming convention refactor(Dockerfile): update COPY commands to reflect new working directory and Makefile location refactor(config.go): extract .env loading logic to a separate function for better code organization

--- a/compose.yml
+++ b/compose.yml
@@ -30,8 +30,10 @@ services:
       dockerfile: services/telegram-bot/Dockerfile
     restart: unless-stopped
     environment:
-      GPT_SERVICE_ADDRESS: gpt-service:50051
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      GPT_SERVICE_ADDRESS: gpt-service:50051
+      CONTEXT_NAME: default
+      APP_ENV: production
     depends_on:
       - gpt-service
 
