feat(gitignore): update .gitignore to ignore .env files in all directories for better security feat(docker): add .dockerignore file to exclude unnecessary files from Docker build context, improving build performance feat(docker): add compose-local.yml and compose.yml for Docker Compose, enabling easier local development and deployment

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,6 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,goland+all,macos
 
 context.txt
-.env
+**/.env
 **/lib
 **/.idea
