--- a/services/instagram_service/pyproject.toml
+++ b/services/instagram_service/pyproject.toml
@@ -12,6 +12,7 @@ instagrapi = "^1.17.13"
 pillow = "^10.0.0"
 datetime = "^5.2"
 asyncio = "^3.4.3"
+grpc = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
