--- a/services/instagram_service/pyproject.toml
+++ b/services/instagram_service/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^10.0.0"
 datetime = "^5.2"
 asyncio = "^3.4.3"
 grpc = "^1.0.0"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
