--- a/services/instagram_service/.gitignore
+++ b/services/instagram_service/.gitignore
@@ -266,6 +266,10 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
+#credentials
+.credentials/
+.credentials
+
 # Cython debug symbols
 cython_debug/
 
