--- a/services/instagram_service/.gitignore
+++ b/services/instagram_service/.gitignore
@@ -267,8 +267,8 @@ dmypy.json
 .pytype/
 
 #credentials
-.credentials/
-.credentials
+**/.credentials/
+**/*.credentials
 
 # Cython debug symbols
 cython_debug/
