--- a/services/instagram_service/pyproject.toml
+++ b/services/instagram_service/pyproject.toml
@@ -14,6 +14,11 @@ datetime = "^5.2"
 asyncio = "^3.4.3"
 python-dotenv = "^1.0.0"
 grpcio = "^1.56.2"
+google = "^3.0.0"
+grpcio-tools = "^1.57.0"
+google-api-python-client = "^2.95.0"
+google-auth-httplib2 = "^0.1.0"
+google-auth-oauthlib = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
