--- a/services/instagram-service/Makefile
+++ b/services/instagram-service/Makefile
@@ -1,2 +1,2 @@
 build_proto:
-	mkdir -p ./lib && python3 -m grpc_tools.protoc --proto_path=./protos/ --python_out=./lib --grpc_python_out=./lib ./protos/*.proto
+	mkdir -p ./lib && poetry run python -m grpc_tools.protoc -I ../../protos --python_betterproto_out=lib ../../protos/*.proto
