--- a/services/instagram-service/.dockerignore
+++ b/services/instagram-service/.dockerignore
@@ -1,18 +1,19 @@
 **/telegram-bot/*
-**/gpt-conxet/*
+**/gpt-context/*
 **/secrets.dev.yaml
 **/values.dev.yaml
 **/*.*proj.user
 **/docker-compose*
 **/*.env
 **/*LICENSE
-example.env
-README.md
-!main.py
-!poetry.lock
 !pyproject.toml
+!poetry.lock
 !Makefile
 !.gitignore
-!__init__.py
 !.dockerignore
 !Dockerfile
+!instagram_service
+.idea
+.venv
+example.env
+README.md
