--- a/docker/compose-local.yml
+++ b/docker/compose-local.yml
@@ -36,20 +36,23 @@ services:
       - gpt-service
    
   instagram_service:
-     build:
-       context: .
-       dockerfile: services/instagram_service/Dockerfile
-     restart: unless-stopped
-     environment:
-       GPT_SERVICE_ADDRESS: gpt-service:50051
-       PASSWORD: ${PASSWORD}
-       USER_NAME: ${USER_NAME}
-       PROXY: ${PROXY}
-       TARGET: ${TARGET}
-       CONVERSATION_ID: ${CONVERSATION_ID}
-       CONTEXT_NAME: ${CONTEXT_NAME}
-     depends_on:
-       - gpt-service
+    build:
+      context: .
+      dockerfile: services/instagram-service/Dockerfile
+    restart: unless-stopped
+    environment:
+      GPT_SERVICE_ADDRESS: gpt-service:50051
+      PASSWORD: ${PASSWORD}
+      USER_NAME: ${USER_NAME}
+      PROXY: ${PROXY}
+      VERIFICATION_CODE: ${VERIFICATION_CODE}
+      HOST: ${HOST}
+      PORT: ${PORT}
+      CONVERSATION_ID: ${CONVERSATION_ID}
+      CONTEXT_NAME: ${CONTEXT_NAME}
+    depends_on:
+      - gpt-service
+  
   weaviate:
     image: semitechnologies/weaviate:1.19.6
     expose:
