--- a/services/instagram-service/pyproject.toml
+++ b/services/instagram-service/pyproject.toml
@@ -14,6 +14,9 @@ python-dotenv = "^1.0.0"
 grpcio = "^1.56.2"
 grpcio-tools = "^1.57.0"
 betterproto = "^2.0.0b6"
+pytest = "^7.4.2"
+pytest-mock = "^3.11.1"
+pytest-asyncio = "^0.21.1"
 
 
 [tool.poetry.group.dev.dependencies]
